infrastructure/modules/vpc/vpc.tf

terraform {
    required_version = ">=0.12"
}

#create VPC
resource "aws_vpc" "main" {
    cidr_block = "${var.vpc_cidr}"
    instance_tenancy = "default"
    enable_dns_support = true
    enable_dns_hostnames = true

    tags = {
        Name = "Main VPC"        
    }
}
resource "aws_subnet" "publicsubnets" {
    count = "${length(var.azs)}"
    vpc_id = "${aws_vpc.main.id}"
    map_public_ip_on_launch = true
    availability_zone = "${element(var.azs, count.index)}"
    cidr_block = "${element(var.public_subnet_cidr, count.index)}"
    tags = {
        Name = "Public-Subnet-${count.index + 1}"
    }
} 

resource "aws_subnet" "privatesubnets" {
    count = "${length(var.azs)}"
    vpc_id = "${aws_vpc.main.id}"
    map_public_ip_on_launch = false
    availability_zone = "${element(var.azs, count.index)}"
    cidr_block = "${element(var.private_subnet_cidr, count.index)}"
    tags = {
        Name = "Private-Subnet-${count.index + 1}"
    }
} 

resource "aws_internet_gateway" "gw" {
  vpc_id = "${aws_vpc.main.id}"
  tags = {
    Name = "IGateway"
  }
}
resource "aws_route_table" "public-rt" {
    vpc_id = "${aws_vpc.main.id}"
    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = "${aws_internet_gateway.gw.id}"
    }
    tags = {
        "Name" = "Public Subnet RT-terraform"
    }
    
}

resource "aws_route_table_association" "public-rt-association" {   
    count = "${length(var.public_subnet_cidr)}"
    subnet_id = "${element(aws_subnet.publicsubnets.*.id, count.index)}"
    route_table_id = aws_route_table.public-rt.id
}
